refactor: 숫자 리스트 생성 로직 변경